@@ -13,7 +13,6 @@
 #import <UIKit/UIKit.h>
 #import "IView.h"
 
-@class IPullRefresh;
 @class IRefreshControl;
 @class ITable;
 
@@ -23,7 +22,6 @@
 - (void)table:(ITable *)table onHighlight:(IView *)view atIndex:(NSUInteger)index;
 - (void)table:(ITable *)table onUnhighlight:(IView *)view atIndex:(NSUInteger)index;
 - (void)table:(ITable *)table onClick:(IView *)view atIndex:(NSUInteger)index;
-
 /**
  * Must call ITable.endRefresh() when state is IRefreshBegin
  */
@@ -97,10 +95,13 @@
 - (void)onClick:(IView *)view atIndex:(NSUInteger)index;
 
 /**
- Must call endRefresh() when state is IRefreshBegin
+ Implement this method to accept Pull Refresh events, no need to call [super xxx].
+ Must call refreshControl.endRefresh() when state is IRefreshBegin.
  */
 - (void)onRefresh:(IRefreshControl *)refreshControl state:(IRefreshState)state;
+/// @deprecated: Use IRefreshControl.beginRefresh instead
 - (void)beginRefresh:(IRefreshControl *)refreshControl;
+/// @deprecated: Use IRefreshControl.endRefresh instead
 - (void)endRefresh:(IRefreshControl *)refreshControl;
 
 /**
@@ -109,8 +110,6 @@
 @property (nonatomic, weak) id<ITableDelegate> delegate;
 
 ////////////////////////////////////////////////////////
-
-
 
 
 
